--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,7 +4,8 @@
 // font-family: 'Montserrat', sans-serif;
 
 $dark-bg: #1B1E2F;
-$bark-title: #232537;
+$grey-bg: #EBEBEB;
+$dark-title: #232537;
 $dark-title-underline: #393A4D;
 $yellow: #FECB00;
 
@@ -20,3 +21,69 @@ html {
   font-family: 'Montserrat', sans-serif;
   font-size: 10px;
 }
+
+.wrapper {
+  max-width: 1280px;
+  min-height: 100vh;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: row-reverse;
+}
+
+.main-column {
+  width: 64%;
+  padding-top: 110px;
+}
+
+.sub-column {
+  background-color: $dark-bg;
+  width: 36%;
+}
+
+.heading {
+  text-transform: uppercase;
+  font-size: 2.5rem;
+  font-weight: 600;
+  line-height: 1.2em;
+  margin-bottom: 3.2rem;
+  padding-left: 10%;
+  position: relative;
+
+  &::before {
+    content: '';
+    display: block;
+    width: 20px;
+    height: 100%;
+    background-color: $yellow;
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
+
+  &--light{
+    background-color: $grey-bg;
+  }
+}
+
+.header {
+  padding-top: 7.2rem;
+  padding-bottom: 7.2rem;
+
+  &__title {
+    font-size: 6rem;
+    font-weight: 500;
+    line-height: 1.2em;
+    margin-bottom: 1.6rem;
+
+    &--bold {
+      font-weight: 700;
+    }
+  }
+
+  &__subtitle {
+    font-size: 2.5rem;
+    font-weight: 500;
+    line-height: 1.22em;
+  }
+}
+
