--- a/css/style.css
+++ b/css/style.css
@@ -36,13 +36,18 @@ html {
   width: 36%;
 }
 
+.section-wrapper {
+  padding-left: 10%;
+  padding-right: 10%;
+}
+
 .heading {
   text-transform: uppercase;
   font-size: 2.5rem;
   font-weight: 600;
   line-height: 1.2em;
+  padding: .5em 10%;
   margin-bottom: 3.2rem;
-  padding-left: 10%;
   position: relative;
 }
 
@@ -61,9 +66,14 @@ html {
   background-color: #EBEBEB;
 }
 
+.section {
+  margin-bottom: 6rem;
+}
+
 .header {
   padding-top: 7.2rem;
   padding-bottom: 7.2rem;
+  margin-bottom: 6.3rem;
 }
 
 .header__title {
@@ -81,5 +91,11 @@ html {
   font-size: 2.5rem;
   font-weight: 500;
   line-height: 1.22em;
+}
+
+.content {
+  font-size: 1.9rem;
+  font-weight: 500;
+  line-height: 1.5em;
 }
 /*# sourceMappingURL=style.css.map */
