--- a/scss/style.scss
+++ b/scss/style.scss
@@ -40,13 +40,18 @@ html {
   width: 36%;
 }
 
+.section-wrapper {
+  padding-left: 10%;
+  padding-right: 10%;
+}
+
 .heading {
   text-transform: uppercase;
   font-size: 2.5rem;
   font-weight: 600;
   line-height: 1.2em;
+  padding: .5em 10%;
   margin-bottom: 3.2rem;
-  padding-left: 10%;
   position: relative;
 
   &::before {
@@ -65,9 +70,14 @@ html {
   }
 }
 
+.section {
+  margin-bottom: 6rem;
+}
+
 .header {
   padding-top: 7.2rem;
   padding-bottom: 7.2rem;
+  margin-bottom: 6.3rem;
 
   &__title {
     font-size: 6rem;
@@ -87,3 +97,8 @@ html {
   }
 }
 
+.content {
+  font-size: 1.9rem;
+  font-weight: 500;
+  line-height: 1.5em;
+}
