--- a/scss/style.scss
+++ b/scss/style.scss
@@ -102,3 +102,40 @@ html {
   font-weight: 500;
   line-height: 1.5em;
 }
+
+.skills__section-wrapper {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  column-gap: 80px;
+}
+
+.skill {
+  width: 185px;
+  margin-bottom: 1.9rem;
+
+  &__skill-name {
+    font-size: 1.9rem;
+    line-height: 1.2em;
+    font-weight: 500;
+    margin-bottom: 1em;
+  }
+}
+
+.progress-bar {
+  height: 5px;
+  background: $grey-bg;
+
+  &__progress {
+    height: 5px;
+    background-color: $yellow;
+  }
+}
+
+.html .progress-bar__progress {width: 95%}
+.css .progress-bar__progress {width: 90%}
+.js .progress-bar__progress {width: 75%}
+.node .progress-bar__progress {width: 20%}
+.figma .progress-bar__progress {width: 90%}
+.vs-code .progress-bar__progress {width: 90%}
+.git .progress-bar__progress {width: 85%}
