feat: add experience section

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -45,7 +45,7 @@ a {
   width: 36%;
 }
 
-.section-wrapper {
+.content-wrapper {
   padding-left: 10%;
   padding-right: 10%;
 }
@@ -108,7 +108,7 @@ a {
   line-height: 1.5em;
 }
 
-.skills__section-wrapper {
+.skills__content-wrapper {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
