--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,7 @@ a {
   width: 36%;
 }
 
-.section-wrapper {
+.content-wrapper {
   padding-left: 10%;
   padding-right: 10%;
 }
@@ -104,7 +104,7 @@ a {
   line-height: 1.5em;
 }
 
-.skills__section-wrapper {
+.skills__content-wrapper {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
