--- a/css/style.css
+++ b/css/style.css
@@ -31,9 +31,12 @@ a {
           flex-direction: row-reverse;
 }
 
+.column {
+  padding-top: 110px;
+}
+
 .main-column {
   width: 64%;
-  padding-top: 110px;
 }
 
 .sub-column {
@@ -302,5 +305,19 @@ a {
   text-align: center;
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
+}
+
+.userpic {
+  margin-bottom: 6.3rem;
+}
+
+.userpic__content {
+  background-image: url("../assets/jpeg/userpic.jpg");
+  background-size: 100%;
+  width: 26.25rem;
+  height: 26.25rem;
+  margin: 0 auto;
+  border-radius: 50%;
+  border: 7px solid #FECB00;
 }
 /*# sourceMappingURL=style.css.map */
