--- a/scss/style.scss
+++ b/scss/style.scss
@@ -287,7 +287,7 @@ a {
   border: 7px solid $yellow;
 }
 
-.contacts__list {
+.sub-column {
   & dt {
     font-size: 2.1rem;
     line-height: 1.22em;
