--- a/scss/style.scss
+++ b/scss/style.scss
@@ -304,4 +304,14 @@ a {
       margin-bottom: 3.2rem;
     }
   }
+
+  .soft-skills__list {
+    font-size: 2.1rem;
+    line-height: 1.22em;
+    font-weight: 600;
+
+    & li {
+      margin-bottom: 2rem;
+    }
+  }
 }
