--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,7 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Montserrat:wght@500;600;700&display=swap');
-
-// font-family: 'Lato', sans-serif;
-// font-family: 'Montserrat', sans-serif;
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700&display=swap');
 
 $dark-bg: #1B1E2F;
 $grey-bg: #EBEBEB;
