--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@ a {
 }
 
 .column {
-  padding-top: 110px;
+  padding-top: 6.3rem;
 }
 
 .main-column {
@@ -55,7 +55,7 @@ a {
 }
 
 .sub-column .section {
-  margin-bottom: 10rem;
+  margin-bottom: 4rem;
 }
 
 .content-wrapper {
