--- a/scss/style.scss
+++ b/scss/style.scss
@@ -33,7 +33,7 @@ a {
 }
 
 .column {
-  padding-top: 110px;
+  padding-top: 6.3rem;
 }
 
 .main-column {
@@ -55,7 +55,7 @@ a {
   }
 
   & .section {
-    margin-bottom: 10rem;
+    margin-bottom: 4rem;
   }
 }
 
