feat: add adaptive for slider

--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,7 @@ a {
   width: 36%;
   padding-top: 6.3rem;
   padding-bottom: 6.3rem;
-  background-color: #1B1E2F;
+  background-color: #1b1e2f;
 }
 
 .userpic__content {
@@ -55,7 +55,7 @@ a {
   height: 26.25rem;
   margin: 0 auto;
   border-radius: 50%;
-  border: 7px solid #FECB00;
+  border: 7px solid #fecb00;
 }
 
 .wrapper {
@@ -77,7 +77,7 @@ a {
 }
 
 .sub-column {
-  background-color: #1B1E2F;
+  background-color: #1b1e2f;
   color: white;
   width: 36%;
 }
@@ -105,7 +105,7 @@ a {
   font-size: 2.5rem;
   font-weight: 600;
   line-height: 1.2em;
-  padding: .5em 10%;
+  padding: 0.5em 10%;
   margin-bottom: 3.2rem;
   position: relative;
 }
@@ -115,7 +115,7 @@ a {
   display: block;
   width: 20px;
   height: 100%;
-  background-color: #FECB00;
+  background-color: #fecb00;
   position: absolute;
   top: 0;
   left: 0;
@@ -134,7 +134,7 @@ a {
 }
 
 .heading--light {
-  background-color: #EBEBEB;
+  background-color: #ebebeb;
 }
 
 .heading--dark {
@@ -146,7 +146,7 @@ a {
   display: block;
   height: 4px;
   width: 100%;
-  background-color: #393A4D;
+  background-color: #393a4d;
   position: absolute;
   bottom: 0;
   left: 0;
@@ -190,12 +190,12 @@ a {
 
 .progress-bar {
   height: 5px;
-  background: #EBEBEB;
+  background: #ebebeb;
 }
 
 .progress-bar__progress {
   height: 5px;
-  background-color: #FECB00;
+  background-color: #fecb00;
 }
 
 .html .progress-bar__progress {
@@ -236,7 +236,7 @@ a {
   display: block;
   width: 20px;
   height: 2px;
-  background-color: #FECB00;
+  background-color: #fecb00;
 }
 
 .arrow--left .arrow__line::before {
@@ -276,8 +276,7 @@ a {
 }
 
 .slider__frame {
-  width: 53.3rem;
-  height: 40rem;
+  width: 100%;
   overflow: hidden;
   position: relative;
 }
@@ -293,8 +292,6 @@ a {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  -webkit-column-gap: 20px;
-          column-gap: 20px;
   -ms-flex-wrap: nowrap;
       flex-wrap: nowrap;
   position: relative;
@@ -305,11 +302,17 @@ a {
 .slider__slide {
   -ms-flex-negative: 0;
       flex-shrink: 0;
-  width: 53.3rem;
-  height: 40rem;
+  width: 100%;
+  height: 0;
+  padding-top: 75%;
   background-size: 100%;
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
+  position: relative;
+}
+
+.slider__slide:not(:last-child) {
+  margin-right: 20px;
 }
 
 .slider__slide:hover {
@@ -352,7 +355,7 @@ a {
   padding-top: 10px;
   padding-bottom: 10px;
   width: 100%;
-  background-color: #EBEBEB;
+  background-color: #ebebeb;
   font-size: 1.9rem;
   line-height: 1.2em;
   font-weight: 500;
@@ -406,6 +409,13 @@ a {
   .main-column,
   .sub-column {
     width: 100%;
+  }
+  .heading__main {
+    font-size: 5rem;
+  }
+  .slide__title {
+    font-size: 1.5rem;
+    bottom: 0;
   }
 }
 /*# sourceMappingURL=style.css.map */
