--- a/css/style.css
+++ b/css/style.css
@@ -4,12 +4,11 @@
 *::after {
   margin: 0;
   padding: 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 html {
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 10px;
 }
 
@@ -20,13 +19,8 @@ a {
 
 .header,
 .main {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: reverse;
-      -ms-flex-direction: row-reverse;
-          flex-direction: row-reverse;
+  flex-direction: row-reverse;
 }
 
 .title {
@@ -34,7 +28,6 @@ a {
   padding-top: 6.3rem;
   padding-bottom: 6.3rem;
 }
-
 .title .heading {
   padding-top: 7.2rem;
   padding-bottom: 7.2rem;
@@ -47,7 +40,6 @@ a {
   padding-bottom: 6.3rem;
   background-color: #1b1e2f;
 }
-
 .userpic__content {
   background-image: url("../assets/jpeg/userpic.jpg");
   background-size: 100%;
@@ -67,11 +59,9 @@ a {
 .main-column {
   width: 64%;
 }
-
 .main-column .section {
   margin-bottom: 6rem;
 }
-
 .main-column a {
   border-bottom: 2px dotted rgba(0, 0, 0, 0.2);
 }
@@ -81,16 +71,13 @@ a {
   color: white;
   width: 36%;
 }
-
 .sub-column .content-wrapper {
   padding-left: 24%;
   padding-right: 24%;
 }
-
 .sub-column .section {
   margin-bottom: 4rem;
 }
-
 .sub-column a {
   border-bottom: 2px dotted rgba(255, 255, 255, 0.2);
 }
@@ -109,9 +96,8 @@ a {
   margin-bottom: 3.2rem;
   position: relative;
 }
-
 .heading::before {
-  content: '';
+  content: "";
   display: block;
   width: 20px;
   height: 100%;
@@ -121,28 +107,23 @@ a {
   left: 0;
   z-index: 2;
 }
-
 .heading__main {
   font-size: 6rem;
   font-weight: 500;
   line-height: 1.2em;
   margin-bottom: 1.6rem;
 }
-
 .heading__subtitle {
   font-weight: 500;
 }
-
 .heading--light {
   background-color: #ebebeb;
 }
-
 .heading--dark {
   background-color: #232537;
 }
-
 .heading--dark::after {
-  content: '';
+  content: "";
   display: block;
   height: 4px;
   width: 100%;
@@ -151,7 +132,6 @@ a {
   bottom: 0;
   left: 0;
 }
-
 .heading--bold {
   font-weight: 700;
 }
@@ -163,24 +143,17 @@ a {
 }
 
 .skills__content-wrapper {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -webkit-column-gap: 80px;
-          column-gap: 80px;
+  flex-direction: row;
+  flex-wrap: wrap;
+  -moz-column-gap: 80px;
+       column-gap: 80px;
 }
 
 .skill {
   width: 185px;
   margin-bottom: 1.9rem;
 }
-
 .skill__skill-name {
   font-size: 1.9rem;
   line-height: 1.2em;
@@ -192,10 +165,21 @@ a {
   height: 5px;
   background: #ebebeb;
 }
-
 .progress-bar__progress {
   height: 5px;
   background-color: #fecb00;
+}
+
+.js .progress-bar__progress {
+  width: 85%;
+}
+
+.ts .progress-bar__progress {
+  width: 60%;
+}
+
+.react .progress-bar__progress {
+  width: 50%;
 }
 
 .html .progress-bar__progress {
@@ -206,144 +190,99 @@ a {
   width: 90%;
 }
 
-.js .progress-bar__progress {
-  width: 75%;
-}
-
 .node .progress-bar__progress {
   width: 20%;
-}
-
-.figma .progress-bar__progress {
-  width: 90%;
-}
-
-.vs-code .progress-bar__progress {
-  width: 90%;
 }
 
 .git .progress-bar__progress {
   width: 85%;
 }
 
+.webpack .progress-bar__progress {
+  width: 65%;
+}
+
 .arrow {
   cursor: pointer;
   padding: 30px 5px;
 }
-
 .arrow__line::before, .arrow__line::after {
-  content: '';
+  content: "";
   display: block;
   width: 20px;
   height: 2px;
   background-color: #fecb00;
 }
-
 .arrow--left .arrow__line::before {
-  -webkit-transform: translateY(-6px) rotate(-45deg);
-          transform: translateY(-6px) rotate(-45deg);
+  transform: translateY(-6px) rotate(-45deg);
 }
-
 .arrow--left .arrow__line::after {
-  -webkit-transform: translateY(6px) rotate(45deg);
-          transform: translateY(6px) rotate(45deg);
+  transform: translateY(6px) rotate(45deg);
 }
-
 .arrow--right .arrow__line::before {
-  -webkit-transform: translateY(-6px) rotate(45deg);
-          transform: translateY(-6px) rotate(45deg);
+  transform: translateY(-6px) rotate(45deg);
 }
-
 .arrow--right .arrow__line::after {
-  -webkit-transform: translateY(6px) rotate(-45deg);
-          transform: translateY(6px) rotate(-45deg);
+  transform: translateY(6px) rotate(-45deg);
 }
 
 .slider {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
 }
-
 .slider__frame {
   width: 100%;
   overflow: hidden;
   position: relative;
 }
-
 .slider__slides {
   position: absolute;
   top: 0;
   left: 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -ms-flex-wrap: nowrap;
-      flex-wrap: nowrap;
+  flex-direction: row;
+  flex-wrap: nowrap;
   position: relative;
-  -webkit-transition: ease 0.3s;
   transition: ease 0.3s;
 }
-
 .slider__slide {
-  -ms-flex-negative: 0;
-      flex-shrink: 0;
+  flex-shrink: 0;
   width: 100%;
   height: 0;
   padding-top: 75%;
   background-size: 100%;
-  -webkit-transition: all 0.3s;
   transition: all 0.3s;
   position: relative;
 }
-
 .slider__slide:not(:last-child) {
   margin-right: 20px;
 }
-
 .slider__slide:hover {
-  -webkit-filter: grayscale(50%);
-          filter: grayscale(50%);
+  filter: grayscale(50%);
 }
-
 .slider__slide:hover .slide__title {
   bottom: 0;
 }
-
+.slider__slide.news-portal {
+  background-image: url("../assets/jpeg/news-portal.png");
+}
 .slider__slide.game-of-life {
   background-image: url("../assets/jpeg/game-of-life.jpg");
 }
-
 .slider__slide.audio-player {
   background-image: url("../assets/jpeg/audio-player.jpg");
 }
-
 .slider__slide.portfolio {
   background-image: url("../assets/jpeg/portfolio.jpg");
 }
-
 .slider__slide.memory-game {
   background-image: url("../assets/jpeg/memory-game.jpg");
 }
-
 .slider__slide.shelter {
   background-image: url("../assets/jpeg/shelter.jpg");
 }
-
 .slider__slide.random-jokes {
   background-image: url("../assets/jpeg/random-gokes.jpg");
 }
@@ -361,7 +300,6 @@ a {
   font-weight: 500;
   text-transform: uppercase;
   text-align: center;
-  -webkit-transition: all 0.3s;
   transition: all 0.3s;
 }
 
@@ -371,43 +309,36 @@ a {
   font-weight: 600;
   margin-bottom: 0.8rem;
 }
-
 .sub-column dd {
   font-size: 1.6rem;
   line-height: 1.22em;
   font-weight: 500;
 }
-
 .sub-column dd:not(:last-child) {
   margin-bottom: 3.2rem;
 }
-
 .sub-column .soft-skills__list {
   font-size: 2.1rem;
   line-height: 1.22em;
   font-weight: 600;
 }
-
 .sub-column .soft-skills__list li {
   margin-bottom: 2rem;
 }
 
 @media (max-width: 1024px) {
   .header,
-  .main {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+.main {
+    flex-direction: column;
   }
   .title {
     padding-top: 0;
     padding-bottom: 0;
   }
   .title,
-  .userpic,
-  .main-column,
-  .sub-column {
+.userpic,
+.main-column,
+.sub-column {
     width: 100%;
   }
   .heading__main {
@@ -417,5 +348,4 @@ a {
     font-size: 1.5rem;
     bottom: 0;
   }
-}
-/*# sourceMappingURL=style.css.map */
+}/*# sourceMappingURL=style.css.map */
