update cv information

--- a/css/style.css
+++ b/css/style.css
@@ -190,10 +190,6 @@ a {
   width: 90%;
 }
 
-.node .progress-bar__progress {
-  width: 20%;
-}
-
 .git .progress-bar__progress {
   width: 85%;
 }
@@ -202,105 +198,18 @@ a {
   width: 65%;
 }
 
-.arrow {
-  cursor: pointer;
-  padding: 30px 5px;
+.projects ul {
+  font-size: 2rem;
 }
-.arrow__line::before, .arrow__line::after {
-  content: "";
-  display: block;
-  width: 20px;
-  height: 2px;
-  background-color: #fecb00;
-}
-.arrow--left .arrow__line::before {
-  transform: translateY(-6px) rotate(-45deg);
-}
-.arrow--left .arrow__line::after {
-  transform: translateY(6px) rotate(45deg);
-}
-.arrow--right .arrow__line::before {
-  transform: translateY(-6px) rotate(45deg);
-}
-.arrow--right .arrow__line::after {
-  transform: translateY(6px) rotate(-45deg);
+.projects p:not(:last-child) {
+  margin-bottom: 0.2em;
 }
 
-.slider {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
+.project:not(:last-child) {
+  margin-bottom: 2.5rem;
 }
-.slider__frame {
-  width: 100%;
-  overflow: hidden;
-  position: relative;
-}
-.slider__slides {
-  position: absolute;
-  top: 0;
-  left: 0;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  position: relative;
-  transition: ease 0.3s;
-}
-.slider__slide {
-  flex-shrink: 0;
-  width: 100%;
-  height: 0;
-  padding-top: 75%;
-  background-size: 100%;
-  transition: all 0.3s;
-  position: relative;
-}
-.slider__slide:not(:last-child) {
-  margin-right: 20px;
-}
-.slider__slide:hover {
-  filter: grayscale(50%);
-}
-.slider__slide:hover .slide__title {
-  bottom: 0;
-}
-.slider__slide.news-portal {
-  background-image: url("../assets/jpeg/news-portal.png");
-}
-.slider__slide.game-of-life {
-  background-image: url("../assets/jpeg/game-of-life.jpg");
-}
-.slider__slide.audio-player {
-  background-image: url("../assets/jpeg/audio-player.jpg");
-}
-.slider__slide.portfolio {
-  background-image: url("../assets/jpeg/portfolio.jpg");
-}
-.slider__slide.memory-game {
-  background-image: url("../assets/jpeg/memory-game.jpg");
-}
-.slider__slide.shelter {
-  background-image: url("../assets/jpeg/shelter.jpg");
-}
-.slider__slide.random-jokes {
-  background-image: url("../assets/jpeg/random-gokes.jpg");
-}
-
-.slide__title {
-  position: absolute;
-  bottom: -100%;
-  left: 0;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  width: 100%;
-  background-color: #ebebeb;
-  font-size: 1.9rem;
-  line-height: 1.2em;
-  font-weight: 500;
-  text-transform: uppercase;
-  text-align: center;
-  transition: all 0.3s;
+.project__title {
+  margin-bottom: 0.3em;
 }
 
 .sub-column dt {
