--- a/scss/style.scss
+++ b/scss/style.scss
@@ -225,6 +225,11 @@ a {
 }
 
 .project {
+  & p {
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+
   &:not(:last-child) {
     margin-bottom: 2.5rem;
   }
@@ -288,5 +293,12 @@ a {
   .slide__title {
     font-size: 1.5rem;
     bottom: 0;
+  }
+
+  .sub-column {
+    .content-wrapper {
+      padding-left: 10%;
+      padding-right: 10%;
+    }
   }
 }
